test/files/neg/t4727.check
t4727.scala:5: error: an expression of type Null is ineligible for implicit conversion
Error occurred in an application involving default arguments.
    new C[Int]
    ^
one error found
